

build loop
======================

AntBootstrapper/Publisher
----------------------
* Fix uselogger/AntOutputLogger bug. Provides independent showAntOutput attribute on AntBuilder (CC-699). Reported by Jerome Hourquebie.

AntBuilder
----------------------
* Fix validateBuildFileExists() to handle non-absolute, but valid build file with antWorkingDir set to a different work dir on Windows.

BuildQueue
----------------------
* Project blocked in Completed (or Queued) state in the queue, never gets to be built again (CC-443). Patch of Patch by Szczepan Faber.

Cincom Smalltalk VisualWorks Store Source Control
----------------------
* A sourcecontrol implementation for Cincom Smalltalk VisualWorks Store scm (CC-709). Contributed by Randy Coulman.

CMSynergy
----------------------
* Improved modification query for Telelogic Synergy using "useBindTime" (CC-691). Contributed by Jan Koops.

Commandline
----------------------
* Commandline and therefore all Bootstrappers will now throw a CruiseControlException if processes return a non-zero exit code instead of just logging and continuing.  Triggered by CC-619, CC-449, and CC-450.

CompositeBuilder
----------------------
* Document builder attributes of <composite> builder. Reported by Mark Kefauver and EJ Ciramella.
* Change composite builder to use same technique as Project to detect build errors (in the build log, the "build" tag has an "error" attribute).
* Insert composite builder info into build log for each child builder.
Todo: Rearranging these elements (even nesting childLog elements?), might allow display of these child buider info elements in reporting apps.
* Implement (and document) "timeout" attribute.

Configuration documentation generation
----------------------
* Created addiitonal plugin superclasses to make generating configxml.html. Still a work in progress (CC-202). Patch by Jerome Lacoste.

ExecBuilder/RakeBuilder
----------------------
* Implement Progress support for Exec and Rake Builders.
